<resources>
    <string name="app_name">Конвертер</string>

    <string name="length">Длина</string>
    <string name="square">Площадь</string>
    <string name="value">Объём</string>
    <string name="weight">Масса</string>
    <string name="speed">Скорость</string>
    <string name="density">Плотность</string>
    <string name="pressure">Давление</string>
    <string name="temperature">Температура</string>
    <string name="time">Время</string>
    <string name="info">Объем информации</string>
    <string name="place">Разряды</string>


    <string-array name="metrics_length">
        <item>м</item>
        <item>дм</item>
        <item>см</item>
        <item>мм</item>
        <item>миля</item>
        <item>ярд</item>
        <item>фут</item>
        <item>дюйм</item>
        <item>км</item>
    </string-array>

    <string-array name="metrics_square">
        <item>м²</item>
        <item>дм²</item>
        <item>см²</item>
        <item>мм²</item>
        <item>миля²</item>
        <item>ярд²</item>
        <item>фут²</item>
        <item>дюйм²</item>
        <item>ар</item>
        <item>гектар</item>
    </string-array>

    <string-array name="metrics_value">
        <item>м³</item>
        <item>см³</item>
        <item>мм³</item>
        <item>ярд³</item>
        <item>фут³</item>
        <item>дюйм³</item>
        <item>галлон</item>
        <item>пинта</item>
        <item>л</item>
    </string-array>

    <string-array name="metrics_weight">
        <item>кг</item>
        <item>г</item>
        <item>мг</item>
        <item>фунт</item>
        <item>унция</item>
        <item>стоун</item>
        <item>т</item>
        <item>ц</item>
    </string-array>

    <string-array name="metrics_speed">
        <item>м/с</item>
        <item>м/мин</item>
        <item>м/час</item>
        <item>миля/час</item>
        <item>км/с</item>
        <item>км/мин</item>
        <item>км/ч</item>
    </string-array>

    <string-array name="metrics_density">
        <item>кг/м³</item>
        <item>кг/л</item>
        <item>г/л</item>
        <item>мг/л</item>
        <item>г/см³</item>
    </string-array>

    <string-array name="metrics_pressure">
        <item>Па</item>
        <item>кПа</item>
        <item>МПа</item>
        <item>бар</item>
        <item>атмосфера</item>
        <item>мм.рт.ст.</item>
    </string-array>

    <string-array name="metrics_temperature">
        <item>C</item>
        <item>F</item>
        <item>K</item>
    </string-array>

    <string-array name="metrics_time">
        <item>сек</item>
        <item>мин</item>
        <item>час</item>
        <item>сутки</item>
        <item>неделя</item>
        <item>год</item>
    </string-array>

    <string-array name="metrics_info">
        <item>Бит</item>
        <item>Байт</item>
        <item>кБайт</item>
        <item>МБайт</item>
        <item>ГБайт</item>
        <item>ТБайт</item>
        <item>кБит</item>
    </string-array>

</resources>