<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="Калькулятор величин"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/name"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:weightSum="18">

            <LinearLayout
                android:id="@+id/btn_length"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_length"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/length"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_square"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_square"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/square"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_value"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_volume"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/value"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_weight"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_weight"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/weight"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_speed"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_speed"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/speed"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_density"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_density"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/density"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_pressure"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_pressure"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/pressure"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_time"
                        app:tint="?attr/colorOnPrimary" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="7"
                            android:gravity="center"
                            android:text="@string/time"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_rounded"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_folder"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="center"
                        android:text="@string/info"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="27sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

